--- a/angular.json
+++ b/angular.json
@@ -20,19 +20,12 @@
             "outputPath": "dist/hacker-news",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": [],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["node_modules/aos/dist/aos.css", "src/styles.scss"],
+            "scripts": ["node_modules/aos/dist/aos.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
